# mongo-c-driver

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  config.bzl
.github/: pull.yml
src/common/: BUILD.bazel
src/libbson/examples/: BUILD.bazel
src/libbson/src/bson/: BUILD.bazel
src/libbson/src/jsonsl/: BUILD.bazel
src/libmongoc/examples/: BUILD.bazel
src/libmongoc/src/mongoc/: BUILD.bazel  mongoc-counters-private.h  mongoc-openssl.c  mongoc-rpc-private.h  mongoc-rpc.c  mongoc-version.h
